######################################################################################################
# Add Subdirectories for Tests

    # Clock
    if(${MIDILAR_SYSTEM_CLOCK})
        add_subdirectory(Clock)
    endif()

#
######################################################################################################
