######################################################################################################
# Add Subdirectories for Tests

    # Clock
    if(${MIDILAR_CLOCK_STATUS})
        add_subdirectory(Clock)
    endif()

#
######################################################################################################
