add_executable(MIDILAR_MessageParser_Example MessageParser_Example.cpp)
target_link_libraries(MIDILAR_MessageParser_Example PUBLIC MIDILAR) 

add_executable(MIDILAR_MessageParser_CallbacksExample MessageParser_CallbacksExample.cpp)
target_link_libraries(MIDILAR_MessageParser_CallbacksExample PUBLIC MIDILAR) 